[0.1.85] Scrollbars fix

--- a/src/src/scrollbars.css
+++ b/src/src/scrollbars.css
@@ -1,66 +1,67 @@
-@supports (overflow: overlay) {
-    .d-scrollbar-hover {
-        overflow-y: overlay;
-    }
+.d-scrollbar {
+    overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+
+    --mask-content: linear-gradient(
+        to bottom,
+        rgba(0,0,0, 1) calc(100% - 50px),
+        rgba(0,0,0, 0) 100%
+    );
+
+    --mask-scrollbar: linear-gradient(
+        rgba(0,0,0, 1) 100%,
+        rgba(0,0,0, 1) 100%
+    );
+
+    mask-image: var(--mask-content), var(--mask-scrollbar);
+    mask-size: calc(100% - 8px) 100%, 8px 100%;
+    mask-position: 0 0, 100% 0;
+    mask-repeat: no-repeat, no-repeat;
+
+    -webkit-mask-image: var(--mask-content), var(--mask-scrollbar);
+    -webkit-mask-size: calc(100% - 8px) 100%, 8px 100%;
+    -webkit-mask-position: 0 0, 100% 0;
+    -webkit-mask-repeat: no-repeat, no-repeat;
+
+    padding-bottom: 50px;
 }
 
-@supports (-moz-appearance:none) {
-    .d-scrollbar-hover {
-        overflow-y: scroll;
-    }
+.d-scrollbar::-webkit-scrollbar {
+    width: 8px;
 }
 
-@supports not (-moz-appearance:none) {
-    .d-scrollbar-mock > * {
-        max-width: calc(100% - 14px) !important;
-    }
-
-    .d-scrollbar-mock:hover > * {
-        max-width: 100% !important;
-    }
-}
-
-.d-scrollbar-hover::-webkit-scrollbar,
-.d-scrollbar-mock::-webkit-scrollbar {
-    display: block;
-    width: 0;
-}
-
-.d-scrollbar-hover:hover::-webkit-scrollbar,
-.d-scrollbar-mock:hover::-webkit-scrollbar {
-    width: 14px;
-}
-
-.d-scrollbar-fixed::-webkit-scrollbar {
-    display: block;
-    width: 14px;
-}
-
-.d-scrollbar-hover::-webkit-scrollbar-button,
-.d-scrollbar-mock::-webkit-scrollbar-button,
-.d-scrollbar-fixed::-webkit-scrollbar-button {
-    display: none;
-}
-
-.d-scrollbar-hover::-webkit-scrollbar-track,
-.d-scrollbar-mock::-webkit-scrollbar-track,
-.d-scrollbar-fixed::-webkit-scrollbar-track,
-.d-scrollbar-hover::-webkit-scrollbar-track-piece,
-.d-scrollbar-mock::-webkit-scrollbar-track-piece,
-.d-scrollbar-fixed::-webkit-scrollbar-track-piece {
+.d-scrollbar::-webkit-scrollbar-thumb {
+    border-radius: 5px;
     background-color: #00000000;
 }
 
-.d-scrollbar-hover::-webkit-scrollbar-thumb,
-.d-scrollbar-mock::-webkit-scrollbar-thumb,
-.d-scrollbar-fixed::-webkit-scrollbar-thumb {
-    background-color: #00000040;
-    background-clip: content-box;
-    border: 4px solid #00000000;
-    border-radius: 8px;
+.d-scrollbar:hover::-webkit-scrollbar-thumb {
+    background-color: #00000022;
 }
 
-.d-scrollbar-mock,
+.d-scrollbar::-webkit-scrollbar-track {
+    background-color: #00000000;
+}
+
 .d-scrollbar-fixed {
     overflow-y: scroll;
+}
+
+.d-scrollbar-fixed::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+.d-scrollbar-fixed::-webkit-scrollbar-track {
+    background-color: #00000000;
+}
+
+.d-scrollbar-fixed::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #00000000;
+}
+
+.d-scrollbar-fixed:hover::-webkit-scrollbar-thumb {
+    background-color: #00000022;
 }
